[workspace]
resolver = "3"
members = ["lunova_lib", "lunova_client", "lunova_server"]

# [package]
# name = "lunova"
# version = "0.0.0-alpha"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
mirl = { version = ">=9.2.0", features = ["font_support", "indexmap"] }
indexmap = {version = "2.13.0"}
clap ={ version = "4.5.58"}

# Linting baseline
# Errors are annoying so they are warnings
[workspace.lints.rust]
missing_docs = { level = "warn", priority = 1 }
missing_debug_implementations = { level = "warn", priority = 1 }
missing_copy_implementations = { level = "warn", priority = 1 }
trivial_casts = { level = "warn", priority = 1 }
trivial_numeric_casts = { level = "warn", priority = 1 }
unreachable_pub = { level = "warn", priority = 1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
expect_used = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }

cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
inline_always = { level = "allow", priority = 1 }
overly_complex_bool_expr = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
fn_params_excessive_bools = { level = "allow", priority = 1 }
