[package]
name = "lunova_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
mirl = { workspace = true }
indexmap = { workspace = true }
enum_ext = { version = "0.5.1" }

# Encoding - Do not update
bitcode = { version = "0.6.9", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
wincode = { version = "0.4.4", features = ["derive"] }
serde = { version = "1.0.0", features = ["derive"] }

[lints]
workspace = true
